[gd_scene load_steps=5 format=3 uid="uid://d4hq3i4bka86b"]

[ext_resource type="Script" path="res://Code/boss_zombie.gd" id="1_cfq14"]
[ext_resource type="Texture2D" uid="uid://sfb86q7fik3t" path="res://Assets/BossZombie.png" id="2_6tefc"]
[ext_resource type="PackedScene" uid="uid://d2aaue8gfn114" path="res://Scenes/baby_zombie.tscn" id="2_k61j4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_emf0o"]
radius = 64.0456

[node name="Boss Zombie" type="Area2D" groups=["zombie"]]
collision_mask = 2
script = ExtResource("1_cfq14")
health = 400.0
speed = 75.0
separation_distance = 500.0
direction_smoothing = 0.05
baby_zombie = ExtResource("2_k61j4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(21, 1)
scale = Vector2(0.178499, 0.178499)
texture = ExtResource("2_6tefc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.584667)
shape = SubResource("CircleShape2D_emf0o")

[node name="Damage_Timer" type="Timer" parent="."]

[node name="Baby_Zombie_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Baby_Zombie_Timer" to="." method="_on_baby_zombie_timer_timeout"]
